# anny-dock

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: pull_request_template.md
.github/workflows/: main.yml
src/: config.rs  main.rs  sets.rs  style.css  types.rs
src/components/: favorites.rs  mod.rs  spawn.rs
src/icon/: cache.rs  mod.rs  resolver.rs  traits.rs  types.rs
src/icon/strategies/: directory.rs  examples.rs  hyprland.rs  mapping.rs  mod.rs
src/systems/: animation.rs  camera.rs  drag.rs  hover.rs  icon.rs  keybinds.rs  mod.rs  scroll.rs  title.rs
src/ui/: appwindow.slint
src/utils/: config.rs  hover.rs  launcher.rs  loader.rs  mod.rs
