[package]
name = "anny-dock"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = "0.11"
bevy_svg = { version = "0.11", default-features = false, features = ["2d"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
bytemuck = "1.0"
xdgkit = "3.2.5"
resvg = "0.28.0"
usvg = "0.28.0"
tiny-skia = "0.8.0"
