[package]
name = "anny-dock"
version = "0.0.1"
edition = "2021"
description = "A modern, animated dock for Hyprland built with Rust and Bevy Engine"
readme = "README.md"
repository = "https://github.com/horberlan/anny-dock"
license = "MIT"
license-file = "LICENSE"
keywords = ["dock", "bevy", "hyprland", "animated"]

[package.metadata.bundle]
resources = ["assets/"]

[package.metadata.assets]
paths = ["assets/"]

[dependencies]
bevy = "0.11"
bevy_easings = "0.11"
bevy_embedded_assets = "0.8"
bevy_svg = { version = "0.11", default-features = false, features = ["2d"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
bytemuck = "1.0"
xdgkit = "3.2.5"
resvg = "0.28.0"
usvg = "0.28.0"
tiny-skia = "0.8.0"
dirs = "5.0"

[features]
# dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
# dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
opt-level = "s"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"
